--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.19",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
+    "vue-json-edit": "^1.4.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
