--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.4",
+    "jsoneditor": "^9.0.4",
     "lodash": "^4.17.19",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
     "vue-json-edit": "^1.4.3",
+    "vue-json-editor": "^1.4.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -28,7 +30,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.9.2",
-    "sass-loader": "^7.0.3",
+    "sass-loader": "^9.0.3",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
