--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.4",
-    "jsoneditor": "^9.0.4",
     "lodash": "^4.17.19",
     "qs": "^6.9.4",
     "vue": "^2.6.11",
-    "vue-json-edit": "^1.4.3",
-    "vue-json-editor": "^1.4.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "codemirror": "5.56.0",
+    "script-loader": "0.7.2",
+    "jsonlint": "1.6.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
